# BBB

./: .flake8  .gitignore  .pre-commit-config.yaml  Check_business_name.py  README.md  add_found_vi_section.py  add_found_vi_section_csv.py  add_found_via_column.py  create_urls.py  create_urls_from_business_names.py  create_urls_from_emails.py  data_extraction.py  elis_functions.py  feature_selection.py  fill_ind_var_columns.py  final.csv  generate_new_urls.py  generate_url.py  get_status_codes.py  good_emails.csv  main.py  manual_url_checking_helper.py  output.csv  pyproject.toml  requirements.txt  sample_all_inactive.csv  scrape_proxy.py  setup.py  test_scrapers.py  url_only.py  urls.txt
BBBDM/: .coverage  .gitignore  .pre-commit-config.yaml  main.py  sample_businesses.csv
Extract_Data/: README.md  best_ind_vars.csv  create_urls.py  data_extraction.py  fill_ind_var_columns.py  filled_ind_vars.csv  generate_new_urls.py  improved scraper.py  run_scrapers.py
Lib/: Normalizing.py
Main_code_runners/: README.md  main.py  main_machine_learning.py  main_scrape_data.py  main_url_scrape.py  readME.md  stream_0.csv  url_scrape.py
Not_Our_Code/: README.md  elis_functions.py  get_status_codes.py
data/: 2000_randomly_picked.csv  LinearRegression_on_ind_vars.csv  LogisticRegression_on_ind_vars.csv  README.md  add_found_vi_section.py  biruk.csv  biruk_manual_check.csv  biruk_results.csv  collin.csv  collin_manual_check.csv  dylan.csv  dylan_manual_check.csv  filled_in_urls.csv  filled_ind_var.csv  filled_ind_var2.csv  generated_urls.csv  good_emails.csv  jackson.csv  text.csv  (+9 more)
(+144 files in other folders)
